sadna1 app.js,index.html, code-analyzer.js, code-analyzer.test.js

--- a/index.html
+++ b/index.html
@@ -56,6 +56,40 @@
                 </td>
             </tr>
         </table>
+        <table id= "mytable" class="paleBlueRows"></table>
+
+        <style>
+            table.paleBlueRows {
+                font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+                border: 1px solid #FFFFFF;
+                background-color: #EFFF8E;
+                width: 650px;
+                height: 200px;
+                text-align: center;
+                border-collapse: collapse;
+            }
+            table.paleBlueRows td, table.paleBlueRows th {
+                border: 4px solid #C24F77;
+                padding: 7px 6px;
+            }
+            table.paleBlueRows tbody td {
+                font-size: 17px;
+                font-weight: bold;
+                color: #C24F77;
+            }
+            table.paleBlueRows thead {
+                background: #76CE7C;
+            }
+            table.paleBlueRows thead th {
+                font-size: 17px;
+                font-weight: bold;
+                color: #EFFF8E;
+                text-align: center;
+            }
+            table.paleBlueRows tfoot td {
+                font-size: 14px;
+            }
+        </style>
 
         <script src="dist/bundle.js"></script>
     </body>
